--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pytest = "^8.2.1"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -14,6 +15,11 @@ flake8 = "^7.0.0"
 black = "^24.4.2"
 mypy = "^1.10.0"
 isort = "^5.13.2"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.1"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
